# mgyBuildathon

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: __init__.py  config.py  exceptions.py  logging_setup.py  main.py  models.py  orchestrator.py  pyproject.toml
backend/agents/: __init__.py  analyst.py  backtester.py  market_imaginer.py  market_imaginer_kronos.py  mutator.py  narrator.py  stats.py  strategy_architect.py
backend/tests/: conftest.py  test_analyst.py  test_api_contracts.py  test_backtester.py  test_main.py  test_market_imaginer.py  test_market_imaginer_kronos.py  test_mutator.py  test_narrator.py  test_orchestrator.py  test_stats.py  test_strategy_architect.py
docs/: API.md  ARCHITECTURE.md  COMPETITIVE.md  PROBLEM.md  ROADMAP.md  SCHEMA.md  SECURITY.md  SETUP.md  TEAM.md  TECHNICAL.md  TESTING.md  TROUBLESHOOTING.md  USER_STORIES.md  VISION.md
docs/adr/: 001-multi-agent-architecture.md  002-gbm-as-primary-generator.md
frontend/: .eslintrc.json  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/__tests__/components/: MetricCard.test.tsx  ProgressSteps.test.tsx
frontend/__tests__/lib/: format.test.ts
frontend/src/: global.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/evolve/: page.tsx
frontend/src/components/: ChartCard.tsx  CodePreview.tsx  EquityCurveFan.tsx  Histogram.tsx  LeaderboardTable.tsx  MetricCard.tsx  OverfitGauge.tsx  ProgressSteps.tsx  RuinGauge.tsx  StrategyInput.tsx  TabNav.tsx  VerdictPlayer.tsx
frontend/src/lib/: api.ts  fixtures.ts  format.ts  types.ts
