[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantforge-backend"
version = "0.1.0"
description = "QuantForge six-agent trading strategy stress-testing backend"
readme = "../README.md"
requires-python = ">=3.10"
license = { file = "../LICENSE" }
authors = [{ name = "QuantForge Contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "anthropic>=0.25",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "hypothesis>=6.98",
    "mypy>=1.9",
    "ruff>=0.3",
    "black>=24.2",
    "httpx>=0.27",
    "types-requests",
    "pandas-stubs",
]

[tool.setuptools]
packages = ["quantforge"]
package-dir = { "quantforge" = "." }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:anthropic.*",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "main.py",
    "agents/market_imaginer_kronos.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "scipy.*", "structlog.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RET", # return
    "ARG", # unused arguments
    "PL",  # pylint
    "D",   # pydocstyle
]
ignore = [
    "D100",  # missing module docstring (allow on __init__)
    "D104",  # missing package docstring
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "ARG"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py310"]
